--- a/.gitignore
+++ b/.gitignore
@@ -69,4 +69,5 @@ crashlytics-build.properties
 
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
+/Assets/Mech_Constructor_Turrets
 /[Aa]ssets/[Ss]treamingAssets/aa/*
