--- a/.gitignore
+++ b/.gitignore
@@ -70,4 +70,5 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /Assets/Mech_Constructor_Turrets
+/Assets/Mech_Constructor_Turrets.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
