+Adds unit asset

--- a/.gitignore
+++ b/.gitignore
@@ -71,4 +71,6 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /Assets/Mech_Constructor_Turrets
 /Assets/Mech_Constructor_Turrets.meta
+/Assets/Mech_Constructor_Humanoids
+/Assets/Mech_Constructor_Humanoids.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
