+Adds new visuals to enviorment

--- a/.gitignore
+++ b/.gitignore
@@ -73,4 +73,6 @@ crashlytics-build.properties
 /Assets/Mech_Constructor_Turrets.meta
 /Assets/Mech_Constructor_Humanoids
 /Assets/Mech_Constructor_Humanoids.meta
+Assets/SimpleNaturePack.meta
+Assets/SimpleNaturePack/
 /[Aa]ssets/[Ss]treamingAssets/aa/*
